Added services module.

--- a/src/main/app/partials/greeting-list.html
+++ b/src/main/app/partials/greeting-list.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-12">
       <ul ng-repeat="greeting in greetings">
-        <li>{{greeting}}</li>
+        <li>{{greeting.text}}</li>
       </ul>
     </div>
   </div>
