Updated LeanPub URL in footer.

--- a/src/main/app/partials/footer.html
+++ b/src/main/app/partials/footer.html
@@ -17,7 +17,7 @@
            target="_blank"
            class="text-muted h3 link-danger"><i class="fa fa-fw fa-youtube-play"></i></a>
 
-        <a href="https://leanpub.com/leanstacks-marionette-spring"
+        <a href="https://leanpub.com/u/matthewwarman"
            title="LeanStacks Instructional Publications on LeanPub"
            target="_blank"
            class="text-muted h3 link-black"><i class="fa fa-fw fa-leanpub"></i></a>
