--- a/src/main/app/partials/greeting-create.html
+++ b/src/main/app/partials/greeting-create.html
@@ -18,29 +18,31 @@
 
   <div class="row">
     <div class="col-md-12">
-      <form class="form-horizontal">
-        <div class="form-group">
-          <label for="greetingLanguage" class="col-sm-2 control-label">Language:</label>
-          <div class="col-sm-3">
-            <select class="form-control" id="greetingLanguage" ng-model="greeting.lang">
-              <option value="en">English</option>
-              <option value="fr">French</option>
-              <option value="es">Spanish</option>
-            </select>
+      <div ng-controller="GreetingCreateFormController">
+        <form class="form-horizontal">
+          <div class="form-group">
+            <label for="greetingLanguage" class="col-sm-2 control-label">Language:</label>
+            <div class="col-sm-3">
+              <select class="form-control" id="greetingLanguage" ng-model="greeting.lang">
+                <option value="en">English</option>
+                <option value="fr">French</option>
+                <option value="es">Spanish</option>
+              </select>
+            </div>
           </div>
-        </div>
-        <div class="form-group">
-          <label for="greetingText" class="col-sm-2 control-label">Text:</label>
-          <div class="col-sm-6">
-            <input type="text" class="form-control" id="greetingText" placeholder="Enter a Greeting..." ng-model="greeting.text" />
+          <div class="form-group">
+            <label for="greetingText" class="col-sm-2 control-label">Text:</label>
+            <div class="col-sm-6">
+              <input type="text" class="form-control" id="greetingText" placeholder="Enter a Greeting..." ng-model="greeting.text" />
+            </div>
           </div>
-        </div>
-        <div class="form-group">
-          <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn btn-default" ng-click="create(greeting)">Create</button>
+          <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+              <button type="submit" class="btn btn-default" ng-click="create(greeting)">Create</button>
+            </div>
           </div>
-        </div>
-      </form>
+        </form>
+      </div>
     </div>
   </div>
 
