--- a/src/main/app/partials/greeting-list.html
+++ b/src/main/app/partials/greeting-list.html
@@ -1,4 +1,5 @@
 <div class="container-fluid">
+
   <div class="row">
     <div class="col-md-12">
       <div class="page-header">
@@ -10,7 +11,7 @@
   </div>
 
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-6">
       <form class="form-inline">
         <div class="row">
           <div class="col-md-6">
@@ -20,7 +21,7 @@
             </div>
           </div>
           <div class="col-md-6">
-            <div class="form-group pull-right">
+            <div class="form-group">
               <label for="greeting-sort">Sort:</label>
               <select class="form-control input-sm" id="greeting-sort" ng-model="greetingSort">
                 <option value="text">Alphabetical</option>
@@ -30,6 +31,13 @@
           </div>
         </div>
       </form>
+    </div>
+    <div class="col-md-6">
+      <div class="pull-right">
+        <button type="button" class="btn btn-default" ng-click="showModal('#modal-greeting-create-form')">
+          <i class="fa fa-plus text-primary"></i> Create
+        </button>
+      </div>
     </div>
   </div>
 
@@ -53,4 +61,40 @@
       </table>
     </div>
   </div>
+
+  <div id="modal-greeting-create-form" class="modal fade" ng-controller="GreetingCreateFormController">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <form class="form-horizontal">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title"><i class="fa fa-plus-circle text-primary"></i> Create a Greeting</h4>
+          </div>
+          <div class="modal-body">
+            <div class="form-group">
+              <label for="greetingLanguage" class="col-sm-2 control-label">Language:</label>
+              <div class="col-sm-6">
+                <select class="form-control" id="greetingLanguage" ng-model="greeting.lang">
+                  <option value="en">English</option>
+                  <option value="fr">French</option>
+                  <option value="es">Spanish</option>
+                </select>
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="greetingText" class="col-sm-2 control-label">Text:</label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" id="greetingText" placeholder="Enter a Greeting..." ng-model="greeting.text" />
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+            <button type="button" class="btn btn-primary" ng-click="create(greeting, '#modal-greeting-create-form')">Create</button>
+          </div>
+        </form>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
+
 </div>
