--- a/src/main/app/partials/greeting-list.html
+++ b/src/main/app/partials/greeting-list.html
@@ -34,7 +34,7 @@
     </div>
     <div class="col-md-6">
       <div class="pull-right">
-        <button type="button" class="btn btn-default" ng-click="showModal('#modal-greeting-create-form')">
+        <button type="button" class="btn btn-default" data-container="#modal-container" data-template="assets/app/partials/greeting-create-modal.html" bs-modal="modal">
           <i class="fa fa-plus text-primary"></i> Create
         </button>
       </div>
@@ -62,39 +62,6 @@
     </div>
   </div>
 
-  <div id="modal-greeting-create-form" class="modal fade" ng-controller="GreetingCreateFormController">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <form class="form-horizontal">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title"><i class="fa fa-plus-circle text-primary"></i> Create a Greeting</h4>
-          </div>
-          <div class="modal-body">
-            <div class="form-group">
-              <label for="greetingLanguage" class="col-sm-2 control-label">Language:</label>
-              <div class="col-sm-6">
-                <select class="form-control" id="greetingLanguage" ng-model="greeting.lang">
-                  <option value="en">English</option>
-                  <option value="fr">French</option>
-                  <option value="es">Spanish</option>
-                </select>
-              </div>
-            </div>
-            <div class="form-group">
-              <label for="greetingText" class="col-sm-2 control-label">Text:</label>
-              <div class="col-sm-10">
-                <input type="text" class="form-control" id="greetingText" placeholder="Enter a Greeting..." ng-model="greeting.text" />
-              </div>
-            </div>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-            <button type="button" class="btn btn-primary" ng-click="create(greeting, '#modal-greeting-create-form')">Create</button>
-          </div>
-        </form>
-      </div><!-- /.modal-content -->
-    </div><!-- /.modal-dialog -->
-  </div><!-- /.modal -->
+  <div id="modal-container"></div>
 
 </div>
