--- a/src/main/app/partials/header-navbar.html
+++ b/src/main/app/partials/header-navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default" bs-navbar>
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -14,13 +14,13 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="#/home">Home</a></li>
+        <li data-match-route="/home"><a href="#/home">Home</a></li>
         <li class="dropdown">
           <a href="#" ng-click="preventDefaultAction($event)" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Greetings <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#/greetings">List</a></li>
+            <li data-match-route="/?(greetings$)"><a href="#/greetings">List</a></li>
             <li class="divider"></li>
-            <li><a href="#/greetings/create">Create</a></li>
+            <li data-match-route="/greetings/create"><a href="#/greetings/create">Create</a></li>
           </ul>
         </li>
       </ul>
