--- a/src/main/app/partials/header-navbar.html
+++ b/src/main/app/partials/header-navbar.html
@@ -16,7 +16,7 @@
       <ul class="nav navbar-nav">
         <li data-match-route="/home"><a href="#/home">Home</a></li>
         <li class="dropdown">
-          <a href="#" ng-click="preventDefaultAction($event)" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Greetings <span class="caret"></span></a>
+          <a href="#" ng-click="preventDefaultAction($event)" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" bs-dropdown>Greetings <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li data-match-route="/?(greetings$)"><a href="#/greetings">List</a></li>
             <li class="divider"></li>
@@ -26,7 +26,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Account <span class="caret"></span></a>
+          <a href="#" ng-click="preventDefaultAction($event)" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" bs-dropdown>Account <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="#/account">Profile</a></li>
             <li class="divider"></li>
