Added AngularStrap alert to create Greeting failure handler.

--- a/src/main/app/partials/greeting-create-modal.html
+++ b/src/main/app/partials/greeting-create-modal.html
@@ -7,6 +7,7 @@
           <h4 class="modal-title"><i class="fa fa-plus-circle text-primary"></i> Create a Greeting</h4>
         </div>
         <div class="modal-body">
+          <div id="form-greeting-create-alert"></div>
           <div class="form-group">
             <label for="greetingLanguage" class="col-sm-2 control-label">Language:</label>
             <div class="col-sm-6">
