--- a/src/main/app/partials/greeting-create.html
+++ b/src/main/app/partials/greeting-create.html
@@ -19,6 +19,11 @@
   <div class="row">
     <div class="col-md-12">
       <div ng-controller="GreetingCreateFormController">
+        <div class="row">
+          <div class="col-sm-6 col-sm-offset-2">
+            <div id="form-greeting-create-alert"></div>
+          </div>
+        </div>
         <form class="form-horizontal">
           <div class="form-group">
             <label for="greetingLanguage" class="col-sm-2 control-label">Language:</label>
