Removed *modalSelector* parameter from the Greeting create function as it is no longer needed with AngularStrap modals.

--- a/src/main/app/partials/greeting-create-modal.html
+++ b/src/main/app/partials/greeting-create-modal.html
@@ -27,7 +27,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" ng-click="$hide()">Cancel</button>
-          <button type="button" class="btn btn-primary" ng-click="create(greeting, '#modal-greeting-create-form')">Create</button>
+          <button type="button" class="btn btn-primary" ng-click="create(greeting)">Create</button>
         </div>
       </form>
     </div><!-- /.modal-content -->
