Added AngularStrap aside to greeting list.

--- a/src/main/app/partials/greeting-list.html
+++ b/src/main/app/partials/greeting-list.html
@@ -5,6 +5,7 @@
       <div class="page-header">
         <h1>
           <i class="fa fa-list text-primary"></i> Greeting List
+          <sup><i class="fa fa-info-circle" ng-class="greetingInfoClass" ng-mouseover="greetingInfoClass='text-primary fa-lg cursor-pointer'" ng-mouseleave="greetingInfoClass='text-muted'" data-template="assets/app/partials/greeting-info-aside.html" data-container="body" bs-aside></i></sup>
         </h1>
       </div>
     </div>
