Added Footer controller.  Applied date filter to footer template.

--- a/src/main/app/partials/footer.html
+++ b/src/main/app/partials/footer.html
@@ -24,4 +24,13 @@
       </p>
     </div>
   </div>
+
+  <div class="row">
+    <div class="col-md-12">
+      <p class="text-center text-muted">
+        <small>{{currentDateTime | date:'short'}}</small>
+      </p>
+    </div>
+  </div>
+
 </div>
