--- a/src/main/app/partials/greeting-create-modal.html
+++ b/src/main/app/partials/greeting-create-modal.html
@@ -1,7 +1,7 @@
 <div class="modal" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content" ng-controller="GreetingCreateFormController">
-      <form class="form-horizontal">
+      <form name="form" class="form-horizontal">
         <div class="modal-header">
           <button type="button" class="close" aria-label="Close" ng-click="$hide()"><span aria-hidden="true">&times;</span></button>
           <h4 class="modal-title"><i class="fa fa-plus-circle text-primary"></i> Create a Greeting</h4>
@@ -11,7 +11,11 @@
           <div class="form-group">
             <label for="greetingLanguage" class="col-sm-2 control-label">Language:</label>
             <div class="col-sm-6">
-              <select class="form-control" id="greetingLanguage" ng-model="greeting.lang">
+              <select id="greeting-lang"
+                      name="greetingLang"
+                      ng-model="greeting.lang"
+                      class="form-control"
+                      required>
                 <option value="en">English</option>
                 <option value="fr">French</option>
                 <option value="es">Spanish</option>
@@ -21,7 +25,13 @@
           <div class="form-group">
             <label for="greetingText" class="col-sm-2 control-label">Text:</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" id="greetingText" placeholder="Enter a Greeting..." ng-model="greeting.text" />
+              <input id="greeting-text"
+                     name="greetingText"
+                     ng-model="greeting.text"
+                     type="text"
+                     class="form-control"
+                     placeholder="Enter a Greeting..."
+                     required />
             </div>
           </div>
         </div>
