--- a/src/main/app/partials/greeting-create.html
+++ b/src/main/app/partials/greeting-create.html
@@ -24,11 +24,15 @@
             <div id="form-greeting-create-alert"></div>
           </div>
         </div>
-        <form class="form-horizontal">
+        <form name="form" class="form-horizontal" novalidate>
           <div class="form-group">
-            <label for="greetingLanguage" class="col-sm-2 control-label">Language:</label>
+            <label for="greeting-lang" class="col-sm-2 control-label">Language:</label>
             <div class="col-sm-3">
-              <select class="form-control" id="greetingLanguage" ng-model="greeting.lang">
+              <select id="greeting-lang"
+                      name="greetingLang"
+                      ng-model="greeting.lang"
+                      class="form-control"
+                      required>
                 <option value="en">English</option>
                 <option value="fr">French</option>
                 <option value="es">Spanish</option>
@@ -36,14 +40,21 @@
             </div>
           </div>
           <div class="form-group">
-            <label for="greetingText" class="col-sm-2 control-label">Text:</label>
+            <label for="greeting-text" class="col-sm-2 control-label">Text:</label>
             <div class="col-sm-6">
-              <input type="text" class="form-control" id="greetingText" placeholder="Enter a Greeting..." ng-model="greeting.text" />
+              <input id="greeting-text"
+                     name="greetingText"
+                     ng-model="greeting.text"
+                     type="text"
+                     class="form-control"
+                     placeholder="Enter a Greeting..."
+                     required />
             </div>
           </div>
           <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-              <button type="submit" class="btn btn-default" ng-click="create(greeting)">Create</button>
+              <button type="button" class="btn btn-default" ng-click="reset(form)">Clear</button>
+              <button type="submit" class="btn btn-primary" ng-click="create(greeting)">Create</button>
             </div>
           </div>
         </form>
