Fixed missing closing 'small' tag.

--- a/src/main/app/partials/greeting-info-aside.html
+++ b/src/main/app/partials/greeting-info-aside.html
@@ -6,7 +6,7 @@
         <h4 class="aside-title"><i class="fa fa-info-circle"></i> More Information</h4>
       </div>
       <div class="aside-body" ng-click="$hide()">
-        <h2>greeting <small>[<strong>gree</strong>-ting]</h2>
+        <h2>greeting <small>[<strong>gree</strong>-ting]</small></h2>
         <p class="lead">
           noun
         </p>
