Updated all third-party libraries.

--- a/src/main/app/partials/greeting-list.html
+++ b/src/main/app/partials/greeting-list.html
@@ -5,7 +5,7 @@
       <div class="page-header">
         <h1>
           <i class="fa fa-list text-primary"></i> Greeting List
-          <sup data-trigger="hover" data-animation="am-flip-x" data-title="Click for more information." bs-tooltip><i class="fa fa-info-circle" ng-class="greetingInfoClass" ng-mouseover="greetingInfoClass='text-primary fa-lg cursor-pointer'" ng-mouseleave="greetingInfoClass='text-muted'" data-template="assets/app/partials/greeting-info-aside.html" data-container="body" bs-aside></i></sup>
+          <sup data-trigger="hover" data-animation="am-flip-x" data-title="Click for more information." bs-tooltip><i class="fa fa-info-circle" ng-class="greetingInfoClass" ng-mouseover="greetingInfoClass='text-primary fa-lg cursor-pointer'" ng-mouseleave="greetingInfoClass='text-muted'" data-template-url="assets/app/partials/greeting-info-aside.html" data-container="body" bs-aside></i></sup>
         </h1>
       </div>
     </div>
@@ -35,7 +35,7 @@
     </div>
     <div class="col-md-6">
       <div class="pull-right">
-        <button type="button" class="btn btn-default" data-container="#modal-container" data-template="assets/app/partials/greeting-create-modal.html" bs-modal="modal">
+        <button type="button" class="btn btn-default" data-container="#modal-container" data-template-url="assets/app/partials/greeting-create-modal.html" bs-modal="modal">
           <i class="fa fa-plus text-primary"></i> Create
         </button>
       </div>
